@@ -50,6 +50,7 @@ Bugs fixed
 * #1725: On py2 environment, doctest with using non-ASCII characters causes
   ``'ascii' codec can't decode byte`` exception.
 * #1540: Fix RuntimeError with circular referenced toctree
+* #1983: i18n translation feature breaks references which uses section name.
 
 
 Release 1.3.1 (released Mar 17, 2015)
